--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "node-fetch": "^3.3.1",
-    "validator": "^13.9.0"
+    "node-fetch": "^2.6.7"
   }
 }
